#16 ビルド時にblog-cardショートコード内でエラーが起きていたら、コンソール WARN出力するように修正

--- a/layouts/shortcodes/blog-card.html
+++ b/layouts/shortcodes/blog-card.html
@@ -1,8 +1,8 @@
 {{- $url := (.Get 0) -}}
 {{- with $result := resources.GetRemote $url -}}
-    {{- if $result.Err -}}
-        {{ $result.Err }}
-    {{ else }}
+    {{- with $result.Err -}}
+        {{- warnf "%s" . -}}{{- . -}}
+    {{- else -}}
         {{- $title := "" -}}
         {{- $description := "" -}}
         {{- $image := "" -}}
