--- a/layouts/shortcodes/self-blog-card.html
+++ b/layouts/shortcodes/self-blog-card.html
@@ -5,13 +5,13 @@
         <a href="{{- .Permalink -}}" style="padding: 12px;border: solid 1px #eee;display: flex;text-decoration: none;color: #000;" onMouseOver="this.style.opacity='0.9'">
             {{- $thumbnail_url := "" -}}
             {{- with $thumbnail := index (.Resources.Match "thumbnail.*") 0 -}}
-                {{- $thumbnail_url = ($thumbnail.Fit (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
+                {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
             {{- else -}}
                 {{- $thumbnail = resources.Get $.Site.Params.dafaultNoimage -}}
-                {{- $thumbnail_url = ($thumbnail.Fit (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
+                {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
             {{- end -}}
             <div style="flex-shrink: 0;">
-                <img src="{{- $thumbnail_url -}}" alt="{{ .Title }}" width="100" height="100" style="object-fit: contain;">
+                <img src="{{- $thumbnail_url -}}" alt="{{ .Title }}" width="100" height="100">
             </div>
             <div style="margin-left: 10px;">
                 <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
