cssの色指定にVariable変数が一部使われていなかったので修正

--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -92,6 +92,13 @@
                 overflow: auto;
                 white-space: nowrap;
             }
+            &.markdown-body {
+                color: $base-font-color;
+                pre, table {
+                    background: #f6f8fa;
+                    color: #000;
+                }
+            }
         }
     }
     &__relatedArticleList {
