--- a/assets/scss/layouts/partials/article-card.scss
+++ b/assets/scss/layouts/partials/article-card.scss
@@ -40,7 +40,7 @@
             align-items: center;
             justify-content: space-between;
             margin-bottom: 5px;
-            color: #333;
+            color: rgba($base-font-color, 0.8);
             &__center {
                 margin: auto;
             }
