--- a/assets/scss/layouts/partials/footer.scss
+++ b/assets/scss/layouts/partials/footer.scss
@@ -17,6 +17,7 @@
             margin-top: 20px;
             text-align: center;
             font-size: 13px;
+            color: $footer-menu-color;
         }
     }
 }
