--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -16,10 +16,11 @@
             padding: 6px 12px;
             border: 1px solid $light-border;
             background: $base-background;
+            color: $base-font-color;
         }
         &.active a {
-            background: #333;
-            color: #fff;
+            background: rgba($base-font-color, 0.8);
+            color: $base-background;
         }
     }
 }
