メニューアイコンをSVGにした際にクリック反応しないので修正

--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -172,6 +172,9 @@
                             opacity: 1;
                         }
                     }
+                    &__itemIcon {
+                        pointer-events: none;
+                    }
                     &__itemTitle {
                         margin-top: 2px;
                     }
