--- a/assets/scss/layouts/partials/sidebar.scss
+++ b/assets/scss/layouts/partials/sidebar.scss
@@ -102,6 +102,9 @@
                     opacity: 1;
                 }
             }
+            &__itemIcon {
+                pointer-events: none;
+            }
             &__itemTitle {
                 margin-top: 2px;
             }
