--- a/layouts/partials/sns-links.html
+++ b/layouts/partials/sns-links.html
@@ -2,7 +2,7 @@
 <div class="partials__snsLinks">
     {{ if $link.twitter }}
         <a href="https://twitter.com/{{ $link.twitter }}" target="_blank" class="partials__snsLinks__link--twitter">
-            <i class="fa-lg fab fa-twitter"></i>
+            <i class="fa-lg fab fa-x-twitter"></i>
         </a>
     {{ end }}
     {{ if $link.instagram }}
