--- a/assets/scss/layouts/partials/sns-links.scss
+++ b/assets/scss/layouts/partials/sns-links.scss
@@ -18,7 +18,7 @@
         &__link {
             &--twitter {
                 @extend %__link;
-                background:#1da1f1;
+                background:#000000;
             }
             &--instagram {
                 @extend %__link;
