Twitterリンクをtwitter.com→x.comに変更

--- a/layouts/partials/sns-links.html
+++ b/layouts/partials/sns-links.html
@@ -1,7 +1,7 @@
 {{ $link := .link }}
 <div class="partials__snsLinks">
     {{ if $link.twitter }}
-        <a href="https://twitter.com/{{ $link.twitter }}" target="_blank" class="partials__snsLinks__link--twitter">
+        <a href="https://x.com/{{ $link.twitter }}" target="_blank" class="partials__snsLinks__link--twitter">
             <i class="fa-lg fab fa-x-twitter"></i>
         </a>
     {{ end }}
