--- a/layouts/partials/share-links.html
+++ b/layouts/partials/share-links.html
@@ -1,6 +1,6 @@
 <ul class="partials__shareLinks">
     <li class="partials__shareLinks__item">
-        <a href="http://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}" target="_blank" title="Tweet" class="partials__shareLinks__itemLink--twitter">
+        <a href="http://x.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}" target="_blank" title="Tweet" class="partials__shareLinks__itemLink--twitter">
             <i class="fab fa-x-twitter"></i>Twitter
         </a>
     </li>
