--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -58,7 +58,7 @@
         {{- with .ExpiryDate -}}
             <meta property="article:expiration_time" content="{{- .Format "2006-01-02T15:04:05-07:00" -}}">
         {{- end -}}
-        {{- with .Site.Author.name -}}
+        {{- with .Site.Params.Author.name -}}
             <meta property="article:author" content="{{- . -}}">
         {{- end -}}
         {{- with .Params.categories -}}
