--- a/layouts/partials/article-card.html
+++ b/layouts/partials/article-card.html
@@ -1,9 +1,12 @@
 <article class="partials__articleCard">
     <div class="partials__articleCard__inner">
         <a href="{{ .Permalink }}" class="partials__articleCard__link"></a>
-        {{ $thumbnail := .Resources.Match "thumbnail.*" }}
+        {{ $thumbnail := .Resources.GetMatch "thumbnail.*" }}
+        {{ if and (not $thumbnail) (.Params.thumbnail) }}
+            {{ $thumbnail = resources.Get .Params.thumbnail }}
+        {{ end }}
         {{ if $thumbnail }}
-            {{ $thumbnail = (index $thumbnail 0).Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
+            {{ $thumbnail = $thumbnail.Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
         {{ else }}
             {{ $thumbnail = resources.Get .Site.Params.dafaultNoimage }}
             {{ $thumbnail = $thumbnail.Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
