デザイン調整

--- a/assets/scss/layouts/partials/related-article.scss
+++ b/assets/scss/layouts/partials/related-article.scss
@@ -33,6 +33,7 @@
         }
         &__content {
             margin-left: 15px;
+            overflow: hidden;
         }
         &__title {
             margin-bottom: 10px;
