--- a/layouts/partials/article-card.html
+++ b/layouts/partials/article-card.html
@@ -1,14 +1,12 @@
 <article class="partials__articleCard">
     <div class="partials__articleCard__inner">
         <a href="{{ .Permalink }}" class="partials__articleCard__link"></a>
-        {{ $thumbnail := .Resources.GetMatch "thumbnail.*" }}
-        {{ if and (not $thumbnail) (.Params.thumbnail) }}
-            {{ $thumbnail = resources.Get .Params.thumbnail }}
-        {{ end }}
+        {{ $thumbnail := or
+            (.Resources.GetMatch "thumbnail.*")
+            (resources.Get .Params.thumbnail)
+            (resources.Get .Site.Params.dafaultNoimage)
+        }}
         {{ if $thumbnail }}
-            {{ $thumbnail = $thumbnail.Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
-        {{ else }}
-            {{ $thumbnail = resources.Get .Site.Params.dafaultNoimage }}
             {{ $thumbnail = $thumbnail.Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
         {{ end }}
         <img src='{{ $thumbnail.Permalink  }}' alt="{{ .Title }}" loading="lazy" class="partials__articleCard__thumbnail">
