目次のデザイン修正

--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -52,7 +52,7 @@
             max-height: 640px;
         }
         &__toc {
-            margin: 10px;
+            margin: 20px;
             padding: 20px 10px;
             border: 1px solid $border;
             border-radius: 4px;
@@ -180,7 +180,7 @@
                 max-width: 100%;
             }
             &__toc {
-                margin: 0;
+                margin: 20px 0;
                 padding: 15px 10px;
                 &__title {
                     margin-left: 5px;
