--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,9 +23,12 @@
             {{- $og_image_url = ($image.Fill (printf "1200x630 center q%d webp" .Site.Params.imageQuality)).Permalink -}}
         {{- end -}}
     {{- else if .IsPage -}}
-        {{- $thumbnail := .Resources.Match "thumbnail.*" -}}
+        {{- $thumbnail := or
+            (.Resources.GetMatch "thumbnail.*")
+            (resources.Get .Params.thumbnail)
+        -}}
         {{- if $thumbnail -}}
-            {{- $og_image_url = ((index $thumbnail 0).Fill (printf "1200x630 center q%d webp" .Site.Params.imageQuality)).Permalink -}}
+            {{- $og_image_url = ($thumbnail.Fill (printf "1200x630 center q%d webp" .Site.Params.imageQuality)).Permalink -}}
         {{- end -}}
     {{- end -}}
 
