--- a/assets/scss/layouts/partials/related-article.scss
+++ b/assets/scss/layouts/partials/related-article.scss
@@ -33,6 +33,7 @@
         }
         &__content {
             margin-left: 15px;
+            overflow: hidden;
         }
         &__title {
             margin-bottom: 10px;
@@ -64,6 +65,7 @@
                 flex-direction: column;
             }
             &__content {
+                width: 100%;
                 margin-left: 0;
                 margin-top: 10px;
             }
