dafaultNoimageをdafaultNoimageに修正（typo修正）

--- a/layouts/partials/related-article.html
+++ b/layouts/partials/related-article.html
@@ -4,7 +4,7 @@
         {{ $thumbnail := or
             (.Resources.GetMatch "thumbnail.*")
             (resources.Get .Params.thumbnail)
-            (resources.Get .Site.Params.dafaultNoimage)
+            (resources.Get .Site.Params.defaultNoimage)
         }}
         {{ if $thumbnail }}
             {{ $thumbnail = $thumbnail.Fill (printf "576x324 center q%d webp" .Site.Params.imageQuality) }}
