--- a/layouts/shortcodes/blog-card.html
+++ b/layouts/shortcodes/blog-card.html
@@ -43,7 +43,7 @@
                 {{- end -}}
             {{- end -}}
         {{- else -}}
-            {{- $thumbnail := resources.Get $.Site.Params.dafaultNoimage -}}
+            {{- $thumbnail := resources.Get $.Site.Params.defaultNoimage -}}
             {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
         {{- end -}}
 
