--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -23,7 +23,7 @@
                 {{ if $icon }}
                     {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
                 {{ else }}
-                    {{ $icon = resources.Get .Site.Params.dafaultNoimage }}
+                    {{ $icon = resources.Get .Site.Params.defaultNoimage }}
                     {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
                 {{ end }}
                 <img src="{{ $icon.Permalink }}" alt="icon" class="partials__sidebar__profile__icon">
@@ -101,7 +101,7 @@
                                 {{ $thumbnail := or
                                     (.Resources.GetMatch "thumbnail.*")
                                     (resources.Get .Params.thumbnail)
-                                    (resources.Get .Site.Params.dafaultNoimage)
+                                    (resources.Get .Site.Params.defaultNoimage)
                                 }}
                                 {{ if $thumbnail }}
                                     {{ $thumbnail = $thumbnail.Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
@@ -132,7 +132,7 @@
                                     {{ $thumbnail := or
                                         (.Resources.GetMatch "thumbnail.*")
                                         (resources.Get .Params.thumbnail)
-                                        (resources.Get .Site.Params.dafaultNoimage)
+                                        (resources.Get .Site.Params.defaultNoimage)
                                     }}
                                     {{ if $thumbnail }}
                                         {{ $thumbnail = $thumbnail.Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
@@ -174,7 +174,7 @@
                                         {{ $thumbnail := or
                                             (.Resources.GetMatch "thumbnail.*")
                                             (resources.Get .Params.thumbnail)
-                                            (resources.Get .Site.Params.dafaultNoimage)
+                                            (resources.Get .Site.Params.defaultNoimage)
                                         }}
                                         {{ if $thumbnail }}
                                             {{ $thumbnail = $thumbnail.Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
