--- a/layouts/shortcodes/self-blog-card.html
+++ b/layouts/shortcodes/self-blog-card.html
@@ -7,7 +7,7 @@
             {{- $thumbnail := or
                 (.Resources.GetMatch "thumbnail.*")
                 (resources.Get .Params.thumbnail)
-                (resources.Get .Site.Params.dafaultNoimage)
+                (resources.Get .Site.Params.defaultNoimage)
             -}}
             {{- if $thumbnail -}}
                 {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
