--- a/layouts/partials/related-article.html
+++ b/layouts/partials/related-article.html
@@ -7,9 +7,9 @@
             (resources.Get .Site.Params.defaultNoimage)
         }}
         {{ if $thumbnail }}
-            {{ $thumbnail = $thumbnail.Fill (printf "576x324 center q%d webp" .Site.Params.imageQuality) }}
+            {{ $thumbnail = $thumbnail.Fill (printf "400x225 center q%d webp" .Site.Params.imageQuality) }}
         {{ end }}
-        <img src='{{ $thumbnail.Permalink  }}' alt="{{ .Title }}" loading="lazy" class="partials__relatedArticle__thumbnail">
+        <img src='{{ $thumbnail.Permalink  }}' alt="{{ .Title }}"{{- if .Site.Params.imageLazyLoad }} loading="lazy"{{ end }} class="partials__relatedArticle__thumbnail">
         <div class="partials__relatedArticle__content">
             <h4 class="partials__relatedArticle__title">
                 {{ .Title }}
