--- a/layouts/shortcodes/blog-card.html
+++ b/layouts/shortcodes/blog-card.html
@@ -49,7 +49,7 @@
 
         <a href="{{- $url -}}" style="padding: 12px;border: solid 1px #eee;display: flex;text-decoration: none;color: inherit;" onMouseOver="this.style.opacity='0.9'">
             <div style="flex-shrink: 0;">
-                <img src="{{- $thumbnail_url -}}" alt="" width="100" height="100">
+                <img src="{{- $thumbnail_url -}}" alt="" width="100" height="100"{{- if $.Site.Params.imageLazyLoad }} loading="lazy"{{ end -}}>
             </div>
             <div style="margin-left: 10px;">
                 <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
