--- a/layouts/shortcodes/custom-figure.html
+++ b/layouts/shortcodes/custom-figure.html
@@ -23,6 +23,7 @@
          {{- end -}}
          {{- with .Get "width" }} width="{{ . }}"{{ end -}}
          {{- with .Get "height" }} height="{{ . }}"{{ end -}}
+         {{- if .Page.Site.Params.imageLazyLoad }} loading="lazy"{{ end -}}
     /><!-- Closing img tag -->
     {{- if .Get "link" }}</a>{{ end -}}
     {{- if or (or (.Get "title") (.Get "caption")) (.Get "attr") -}}
