--- a/layouts/partials/article-card.html
+++ b/layouts/partials/article-card.html
@@ -8,8 +8,8 @@
         }}
         {{ if $thumbnail }}
             {{ $thumbnail = $thumbnail.Fill (printf "640x360 center q%d webp" .Site.Params.imageQuality) }}
-            <img src='{{ $thumbnail.Permalink  }}' alt="{{ .Title }}" loading="lazy" class="partials__articleCard__thumbnail">
         {{ end }}
+        <img src='{{ $thumbnail.Permalink  }}' alt="{{ .Title }}"{{- if .Site.Params.imageLazyLoad }} loading="lazy"{{ end }} class="partials__articleCard__thumbnail">
         <h4 class="partials__articleCard__title">
             {{ .Title }}
         </h4>
