--- a/layouts/shortcodes/self-blog-card.html
+++ b/layouts/shortcodes/self-blog-card.html
@@ -13,7 +13,7 @@
                 {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
             {{- end -}}
             <div style="flex-shrink: 0;">
-                <img src="{{- $thumbnail_url -}}" alt="{{ .Title }}" width="100" height="100"{{- if $.Site.Params.imageLazyLoad }} loading="lazy"{{ end -}}>
+                <img src="{{- $thumbnail_url -}}" alt="{{ .Title }}" width="100" height="100">
             </div>
             <div style="margin-left: 10px;">
                 <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
