--- a/layouts/shortcodes/custom-figure.html
+++ b/layouts/shortcodes/custom-figure.html
@@ -23,7 +23,7 @@
          {{- end -}}
          {{- with .Get "width" }} width="{{ . }}"{{ end -}}
          {{- with .Get "height" }} height="{{ . }}"{{ end -}}
-         {{- if $.Site.Params.imageLazyLoad }} loading="lazy"{{ end -}}
+         {{- with .Get "loading" | default "lazy"  -}} loading="{{ . }}"{{ end -}}
     /><!-- Closing img tag -->
     {{- if .Get "link" }}</a>{{ end -}}
     {{- if or (or (.Get "title") (.Get "caption")) (.Get "attr") -}}
