サイトタイトルが2行でもハンバーガーサイズが変わらないように修正

--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -15,6 +15,7 @@
             width: 33px;
             height: 23px;
             cursor: pointer;
+            flex-shrink: 0;
             &::before {
                 content: "";
                 width: 100%;
